--- a/register.html
+++ b/register.html
@@ -105,7 +105,7 @@
 
 
   <script>
-    var socket = new WebSocket('ws:localhost:5555/ws');
+    var socket = new WebSocket('ws:192.168.36.45:5555/ws');
     var server_status = document.getElementById('serverStatus');
     var finger_status = document.getElementById('finger-print-status');
     var sendId = document.getElementById('sendId');
@@ -152,7 +152,7 @@
       }
       $.ajax({
         type: "POST",
-        url: "http://192.168.2.118/voting_system/actionpages/registration.php",
+        url: "http://192.168.36.191/voting_system/actionpages/registration.php",
         data: {
           name: name,
           gender: gender,
