--- a/static/index.html
+++ b/static/index.html
@@ -83,7 +83,7 @@
                 <tr>
                   <td>
                     <div class="card">
-                      <img src="static/img/samia.jpg" class="card-img-top w-25 mx-auto d-block mt-2" alt="candidate">
+                      <img src="static/img/ccm.png" class="card-img-top w-25 mx-auto d-block mt-2" alt="candidate">
                       <div class="card-body">
                         <h4 class="card-title">Samia Hassan Suluhu</h4>
                         <p class="card-text">CCM</p>
@@ -96,7 +96,7 @@
                 <tr>
                   <td>
                     <div class="card">
-                      <img src="img/candidate.png" class="card-img-top w-25 mx-auto d-block mt-2" alt="candidate">
+                      <img src="static/img/chadema.png" class="card-img-top w-25 mx-auto d-block mt-2" alt="candidate">
                       <div class="card-body">
                         <h4 class="card-title">Tundu Antipas Lissu</h4>
                         <p class="card-text">CHADEMA</p>
@@ -109,7 +109,7 @@
                 <tr>
                   <td>
                     <div class="card">
-                      <img src="img/candidate.png" class="card-img-top w-25 mx-auto d-block mt-2" alt="candidate">
+                      <img src="static/img/act.png" class="card-img-top w-25 mx-auto d-block mt-2" alt="candidate">
                       <div class="card-body">
                         <h4 class="card-title">Zitto Kabwe</h4>
                         <p class="card-text">ACT WAZALENDO</p>
