--- a/static/index.html
+++ b/static/index.html
@@ -38,6 +38,9 @@
 
 
           <div class="col-lg-6">
+            <div class="row">
+              <div class="col-lg-12 p-3">Server Status: <span id="serverStatus">Not connected </span></div>
+            </div>
             <div class="card">
               <div class="card-body">
                 
@@ -161,8 +164,10 @@
       var finger_status = document.getElementById('finger-print-status');
       var vote_btn = document.getElementById('vote-btn');
       var input_name = document.getElementById('input_name');
+      var server_status = document.getElementById('serverStatus');
       socket.onopen = function () {
         console.log('Connected to server');
+        $('#serverStatus').html('Server Connected');
 
       };
       socket.onmessage = function (event) {
@@ -179,11 +184,10 @@
 
       socket.onclose = function () {
         console.log('Network Disconneted');
+        $('#serverStatus').html('Server Disconneted');
       };
 
     </script>
-
-    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
 </body>
 
