--- a/static/register.html
+++ b/static/register.html
@@ -80,18 +80,18 @@
                   </div>  -->
                   
                   <h4 class="p-3">Finger Print Verification</h4>
-                  <button type="button" class="btn btn-danger " id="start-fingerprint">Start</button>
+    <button type="button" class="btn btn-warning" id="start-fingerprint">Start</button>
 
                   <div class=" p-3 mb-2  bg-danger text-light text-center w-100">
                     <h3 id="placeFinger">No Finger Detected</h3>
                   </div>
-
+                     <p id="fingerid"></p>
                 </div>
               </div>
               <div class="col-md-12 ">
                 <div class="card p-2">
                   <h4 class="p-3">Face Recognition</h4>
-
+<button type="button" class="btn btn-warning" id="start-face">Start</button>
                   <div class=" p-3 bg-danger text-light text-center w-100">
                     <h3 id="placeFinger">Not Recognized</h3>
                   </div>
@@ -116,7 +116,7 @@
     var server_status = document.getElementById('serverStatus');
     var finger_status = document.getElementById('finger-print-status');
     //var sendId = document.getElementById('sendId');
-    //var finger_Id = document.getElementById('input_Id');
+    var finger_Id = "";
     socket.onopen = function () {
       console.log('Connected to server');
       $('#serverStatus').html('Server Connected');
@@ -124,7 +124,10 @@
     socket.onmessage = function (event) {
       var data = JSON.parse(event.data);
       var res = data.command;
+      finger_Id=  data.id;
       //res = res.replace(/\s/g, '');
+      
+      //$('#fingerid').html(finger_Id);
       $('#placeFinger').html(res);
 
     }
@@ -146,8 +149,7 @@
       var phone = $("#phone").val();
       var voteId = $("#voteId").val();
       var gender = '';
-     // var fingerId = $("#input_Id").val();
-     var fingerId= Math.floor(Math.random() * 128);
+     var fingerId= finger_Id
       var faceId = "";
       for (var i = 0, length = genders.length; i < length; i++) {
         if (genders[i].checked) {
