--- a/static/index.html
+++ b/static/index.html
@@ -182,7 +182,7 @@
 
 
     <script>
-      var socket = new WebSocket('ws:192.168.36.45:5555/ws');
+      var socket = new WebSocket('ws:localhost:5555/ws');
       var finger_status = document.getElementById('finger-print-status');
       var start_fingerprint = document.getElementById('start-fingerprint');
       var input_name = document.getElementById('input_name');
