--- a/static/register.html
+++ b/static/register.html
@@ -112,7 +112,7 @@
 
 
   <script>
-    var socket = new WebSocket('ws:192.168.36.45:5555/ws');
+    var socket = new WebSocket('ws:localhost:5555/ws');
     var server_status = document.getElementById('serverStatus');
     var finger_status = document.getElementById('finger-print-status');
     //var sendId = document.getElementById('sendId');
