--- a/static/index.html
+++ b/static/index.html
@@ -98,54 +98,42 @@
             </div>
           </div>
           <div class="col-lg-12">
+           <div class="row">
             <p><b>CANDIDATES</b></p>
-            <table class="table">
-              <thead>
-                <tr>
-                  <td>
-                    <div class="card">
-                      <img src="img/ccm.png" class="card-img-top w-25 mx-auto d-block mt-2" alt="candidate">
-                      <div class="card-body">
-                        <h4 class="card-title">Samia Hassan Suluhu</h4>
-                        <p class="card-text">CCM</p>
-                        <button type="button" class="btn btn-warning" id="vote-ccm">VOTE</button>
-                      </div>
-                    </div>
-                  </td>
-
-                </tr>
-                <tr>
-                  <td>
-                    <div class="card">
-                      <img src="img/chadema.png" class="card-img-top w-25 mx-auto d-block mt-2" alt="candidate">
-                      <div class="card-body">
-                        <h4 class="card-title">Tundu Antipas Lissu</h4>
-                        <p class="card-text">CHADEMA</p>
-                        <button type="button" class="btn btn-danger" id="vote-cdm">VOTE</button>
-                      </div>
-                    </div>
-                  </td>
-
-                </tr>
-                <tr>
-                  <td>
-                    <div class="card">
-                      <img src="img/act.png" class="card-img-top w-25 mx-auto d-block mt-2" alt="candidate">
-                      <div class="card-body">
-                        <h4 class="card-title">Zitto Kabwe</h4>
-                        <p class="card-text">ACT WAZALENDO</p>
-                        <button type="button" class="btn btn-primary" id="vote-act">VOTE</button>
-                      </div>
-                    </div>
-                  </td>
-
-                </tr>
-              </thead>
-              <tbody>
-
-              </tbody>
-            </table>
-
+            <div class="col-sm-4">
+              <div class="card">
+                <img src="img/ccm.png" class="card-img-top w-25 mx-auto d-block mt-2" alt="candidate">
+                <div class="card-body">
+                  <h4 class="card-title">Samia Hassan Suluhu</h4>
+                  <p class="card-text">CCM</p>
+                  <button type="button" class="btn btn-warning" id="vote-ccm">VOTE</button>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-4">
+              <div class="card">
+                <img src="img/chadema.png" class="card-img-top w-25 mx-auto d-block mt-2" alt="candidate">
+                <div class="card-body">
+                  <h4 class="card-title">Tundu Antipas Lissu</h4>
+                  <p class="card-text">CHADEMA</p>
+                  <button type="button" class="btn btn-danger" id="vote-cdm">VOTE</button>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-4">
+              <div class="card">
+                <img src="img/act.png" class="card-img-top w-25 mx-auto d-block mt-2" alt="candidate">
+                <div class="card-body">
+                  <h4 class="card-title">Zitto Kabwe</h4>
+                  <p class="card-text">ACT WAZALENDO</p>
+                  <button type="button" class="btn btn-primary" id="vote-act">VOTE</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        </div>
+        
             <div class="card">
               <div class="card-header">
                 <h4 class="text-center">VOTING STATUS </h4>
