--- a/static/register.html
+++ b/static/register.html
@@ -140,7 +140,7 @@
       //res = res.replace(/\s/g, '');
 
       //$('#fingerid').html(finger_Id);
-      $('#placeFinger').html(res);
+      $('#placeFinger').html(check);
       if(check == "Success"){
         $('#placeFinger').html("Finger Exists");
       }else if("error"){
