--- a/static/register.html
+++ b/static/register.html
@@ -137,7 +137,7 @@
       var check = data.check;
       var msg =data.msg;
       finger_Id = data.id;
-      //res = res.replace(/\s/g, '');
+      check = check.replace(/\s/g, '');
 
       //$('#fingerid').html(finger_Id);
       $('#placeFinger').html(check);
