--- a/static/register.html
+++ b/static/register.html
@@ -141,9 +141,11 @@
 
       //$('#fingerid').html(finger_Id);
       $('#placeFinger').html(check);
+      $('#placeFinger').html(res);
       if(check == "Success"){
         $('#placeFinger').html("Finger Exists");
       }else if("error"){
+        $('#placeFinger').html("Starting registration");
         socket.send("e");
       }
       $('#face_status').html(msg);
@@ -158,7 +160,7 @@
     //});
 
     $('#start-fingerprint').click(function (e) {
-     
+      $('#placeFinger').html("Checking if exists");
       socket.send("f");
     });
     
