--- a/static/register.html
+++ b/static/register.html
@@ -146,7 +146,7 @@
     //});
 
     $('#start-fingerprint').click(function (e) {
-      socket.send("e");
+      socket.send("d");
     });
     
     $('#train-modal').click(function (e) {
