--- a/static/register.html
+++ b/static/register.html
@@ -205,7 +205,7 @@
         alert('No finger verification done');
         return;
       }
-      if (faceId === "") {
+      if (face_id === "") {
         alert('Face verification not done');
         return;
       }
@@ -218,7 +218,7 @@
           voteId: voteId,
           phone: phone,
           fingerId: fingerId,
-          faceId: faceId
+          faceId: face_id
         },
         cache: false,
         success: function (data) {
