--- a/static/register.html
+++ b/static/register.html
@@ -209,6 +209,10 @@
         alert('Face verification not done');
         return;
       }
+      if (voteId === "") {
+        alert('Face verification not done');
+        return;
+      }
       $.ajax({
         type: "POST",
         url: "http://192.168.77.181/face_fingerprint_voting/static/actionpages/registration.php",
