--- a/static/register.html
+++ b/static/register.html
@@ -185,7 +185,7 @@
       var phone = $("#phone").val();
       var voteId = $("#voteId").val();
       var gender = '';
-      var fingerId = finger_Id
+      var fingerId = finger_Id;
       
       for (var i = 0, length = genders.length; i < length; i++) {
         if (genders[i].checked) {
