--- a/static/register.html
+++ b/static/register.html
@@ -143,8 +143,8 @@
       var msg =data.msg;
       finger_Id = data.id;
       faceId=data.faceid;
-      finger_Id = finger_Id.replace(/\s/g, '');
-      faceId = faceId.replace(/\s/g, '');
+      //finger_Id = finger_Id.replace(/\s/g, '');
+      //faceId = faceId.replace(/\s/g, '');
 
       //$('#fingerid').html(finger_Id);
       $('#placeFinger').html(res);
