creating admin page

--- a/static/register.html
+++ b/static/register.html
@@ -180,6 +180,7 @@
      
       if (name === "") {
         alert('Provide Voters Name');
+        $('#start-face').prop("disabled", false);
         return;
       }else{
         socket.send("t");
