--- a/static/register.html
+++ b/static/register.html
@@ -81,12 +81,14 @@
             <div class="row">
               <div class="col-md-12 ">
                 <div class="card p-2">
-                  <!-- <div class="input-group mb-3 mt-3">
+                  The following ids is taken
+                  <p id="templates"></p>
+                  <div class="input-group mb-3 mt-3">
                     <input type="number" class="form-control" id="input_Id" placeholder="Enter finger id (1-127)">
                     <div class="input-group-append">
                       <button class="btn btn-success" type="submit">Send</button>
                     </div>
-                  </div>  -->
+                  </div> 
 
                   <h4 class="p-3">Finger Print Verification</h4>
                   <button type="button" class="btn btn-warning" id="start-fingerprint">Start</button>
@@ -144,6 +146,7 @@
       var msg =data.msg;
       finger_Id = data.id;
       face_Id=data.faceid;
+      var tmp=data.templates;
       //finger_Id = finger_Id.replace(/\s/g, '');
       //faceId = faceId.replace(/\s/g, '');
       if(finger_Id  == ''){
@@ -155,6 +158,7 @@
       //$('#fingerid').html(finger_Id);
       $('#placeFinger').html(res);
       $('#face_status').html(msg);
+      $('#templates').html(tmp);
       
     }
 
