creating admin page

--- a/static/register.html
+++ b/static/register.html
@@ -187,8 +187,8 @@
         $('#start-face').prop("disabled", false);
         return;
       }else{
-        socket.send("t");
-        socket.send(name);
+        socket.send("m");
+        //socket.send(name);
 
       }
       
