creating admin page

--- a/static/register.html
+++ b/static/register.html
@@ -87,7 +87,7 @@
                   <button type="button" class="btn btn-warning" id="start-fingerprint">Start</button>
 
                   <div class=" p-3 mb-2  bg-danger text-light text-center w-100">
-                    <h3 id="placeFinger">No Finger Detected</h3>
+                    <h3 id="placeFinger">Start registration</h3>
                   </div>
                  
                   <div class="input-group mb-3 mt-3">
