admin and result pages apdating

--- a/static/resultpage.html
+++ b/static/resultpage.html
@@ -68,8 +68,7 @@
                             },
                             cache: false,
                             success: function(data) {
-                                alert(data);
-                            
+                               $('#result').html(data)
                             },
                             error: function(xhr, status, error) {
                             alert(error);
